error dikit ga ngaruh

--- a/views/docs.html
+++ b/views/docs.html
@@ -217,7 +217,7 @@
                 <span class="data-list">Get</span>
                 <!-- <span class="data-list">Get</span> -->
                 <span class="data-list">Get</span>
-                <span class="data-list">Get</span>
+                <!-- <span class="data-list">Get</span> -->
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
